add-random-number-in-the-number-list

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
       <!-- Numbers -->
       <ul id="numbers-list" class="d-flex gap-5 list-unstyled">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li class="item-list"></li>
+        <li class="item-list"></li>
+        <li class="item-list"></li>
+        <li class="item-list"></li>
+        <li class="item-list"></li>
       </ul>
 
       <!-- Form -->
