--- a/index.html
+++ b/index.html
@@ -26,13 +26,7 @@
       <p id="instructions">Memorizza i numeri entro il tempo limite!</p>
 
       <!-- Numbers -->
-      <ul id="numbers-list" class="d-flex gap-5 list-unstyled">
-        <li class="item-list"></li>
-        <li class="item-list"></li>
-        <li class="item-list"></li>
-        <li class="item-list"></li>
-        <li class="item-list"></li>
-      </ul>
+      <ul id="numbers-list" class="d-flex gap-5 list-unstyled"></ul>
 
       <!-- Form -->
       <form id="answers-form" class="d-none">
